# grokking-competing-basins

./: .gitignore  README.md  pyproject.toml
configs/: default.yaml
scripts/: estimate_llc.py  generate_all_figures.py  run_all.py  run_gsm.py  run_llc_tracking.py  run_robustness.py  run_scaling_N.py  run_scaling_k.py  run_scaling_p.py  train.py
src/: utils.py
src/analysis/: __init__.py  grokking_severity.py  llc_estimation.py  scaling_laws.py
src/data/: __init__.py  modular_arithmetic.py
src/models/: __init__.py  quadratic_net.py
src/training/: __init__.py  checkpointing.py  trainer.py
src/viz/: __init__.py  animation.py  gsm_plots.py  robustness_plots.py  scaling_plots.py  style.py  training_curves.py
tests/: test_data.py  test_loss.py  test_model.py  test_training.py  test_viz.py
